--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 30
     buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "com.example.louissankey.darkhorselayouts"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -28,21 +28,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:design:24.0.0'
-    compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.android.support:recyclerview-v7:24.0.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.eluleci:flatui:3.0.0'
-    compile 'com.romainpiel.shimmer:library:1.4.0@aar'
-    compile 'hanks.xyz:htextview-library:0.1.3'
-    compile 'pl.tajchert:waitingdots:0.2.0'
+
+
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.eluleci:flatui:3.0.0'
+    implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
+    implementation 'hanks.xyz:htextview-library:0.1.3'
+    implementation 'pl.tajchert:waitingdots:0.2.0'
     //firebase
-    compile 'com.google.firebase:firebase-core:9.0.0'
-    compile 'com.google.firebase:firebase-database:9.0.0'
+    implementation 'com.google.firebase:firebase-core:9.0.0'
+    implementation 'com.google.firebase:firebase-database:9.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
